Fixed overflow on Results page when loading

--- a/components/Examples.module.css
+++ b/components/Examples.module.css
@@ -18,6 +18,7 @@
 }
 .preTag {
   border-radius: 10px;
+  overflow: hidden;
 }
 .right {
   width: 100%;
