--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -53,7 +53,11 @@
   background-color: #ffa9a941;
   border-radius: 8px;
 }
-
+/* {`${styles.menuOptions} ${styles.slideIn}`} */
+/* .slideIn {
+}
+.slideOut {
+} */
 .dropdownMenuHidden {
   visibility: hidden;
   animation: 300ms animationMenuOut ease-out;
@@ -110,6 +114,7 @@
   font-size: 1.1rem;
   float: inline-start;
 }
+
 @keyframes animationMenu {
   0% {
     visibility: hidden;
