--- a/styles/Results.module.css
+++ b/styles/Results.module.css
@@ -1,3 +1,7 @@
+.wrapper {
+  margin: 0 auto;
+  width: 100%;
+}
 .description {
   margin-top: 0.5rem;
 }
